added a config file system

--- a/hoopa deathh bot/hoopa deathh bot.vcxproj
+++ b/hoopa deathh bot/hoopa deathh bot.vcxproj
@@ -79,6 +79,7 @@
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>$(IncludePath)</IncludePath>
     <LibraryPath>$(LibraryPath)</LibraryPath>
+    <OutDir>C:\Users\gogos1073\source\repos\hoopa deathh bot\build</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
